--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -11,10 +11,10 @@
 <body>
 	<br>
 	<div id="steps" class="container text-center">
-		<div id="stepOne"><i class="far fa-pencil"></i>&nbsp;<a id="stepOne-text">정보입력</a></div>
+		<div id="stepOne"><i class="far fa-pencil"></i>&nbsp;<a id="stepOne-text">기본정보</a></div>
 		<div id="stepTwo"><i class="fal fa-user"></i>&nbsp;<a id="stepTwo-text">본인인증</a></div>
-		<div id="stepThree"><i class="fal fa-address-card"></i>&nbsp;<a id="stepThree-text">신청등록</a></div>
-		<div id="stepFour"><i class="fas fa-check-circle"></i>&nbsp;<a id="stepFour-text">등록완료</a></div>
+		<div id="stepThree"><i class="far fa-map-marker-alt"></i>&nbsp;<a id="stepThree-text">지역선택</a></div>
+		<div id="stepFour"><i class="fal fa-info-circle"></i>&nbsp;<a id="stepFour-text"></a>기타정보</div>
 	</div>	
 	<br>
 	<div class="title-divider"></div>
