--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -19,7 +19,7 @@
 	<br>
 	<div class="container text-center">
 		<h3>활동지역을 선택하세요</h3>
-		
+		<div class="location"></div>
 	</div>
 	<br>
 	<div><button style="display:block; margin: auto; width: 80%;" id="register" type="button" class="btn btn-success">다음</button></div>
