--- a/src/main/resources/static/css/partner/partnerStepThree.css
+++ b/src/main/resources/static/css/partner/partnerStepThree.css
@@ -39,3 +39,9 @@
 	border-right: 1px solid #ccc;
 	font-size: 14px;
 }
+
+.title-divider {
+	border-bottom: 1px solid #ccc;
+	width: 80%;
+	margin: auto;
+}
