--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -17,7 +17,7 @@
 		<div id="stepFour"><i class="fal fa-info-circle"></i>&nbsp;<a id="stepFour-text"></a>기타정보</div>
 	</div>	
 	<br>
-	<div class="title-divider"></div>
+	<div class="line-divider"></div>
 	<br>
 	<div id="applicantType" class="container text-center">
 		<div style="margin: auto; width:80%;">
@@ -48,7 +48,7 @@
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="number" value=''></div>
 	<br>
-	<div class="title-divider"></div>
+	<div class="line-divider"></div>
 	<br>
 	<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 </body>
