--- a/src/main/resources/templates/partner/partnerStepFour.html
+++ b/src/main/resources/templates/partner/partnerStepFour.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/partner/partnerStepThree.css">
+<link rel="stylesheet" href="/css/partner/partnerStepFour.css">
 <title>Insert title here</title>
 </head>
 
@@ -18,25 +18,11 @@
 	</div>	
 	<br>
 	<div class="container text-center">
-		<h3>활동지역을 선택하세요</h3>		
-	</div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div class="container text-center">
-		<div class="location"></div>
-	</div>
-	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="select" type="button" class="btn btn-secondary">선택</button></div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div class="container text-center">
-		<div class="location-selected"></div>
+		<h3>나를 소개하세요</h3>		
 	</div>
 	<br>
 	<div class="container text-center">
-		<a id="localtion_selected_text">선택된 지역의 매물을 담당합니다.</a>
+		<a id="localtion_selected_text">소개문구</a>
 	</div>
 	<br>
 	<div class="line-divider"></div>
@@ -45,6 +31,6 @@
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-<script src="/js/partner/partnerStepThree.js"></script>
+<script src="/js/partner/partnerStepFour.js"></script>
 
 </html>
