--- a/src/main/resources/templates/partner/partnerStepFour.html
+++ b/src/main/resources/templates/partner/partnerStepFour.html
@@ -17,17 +17,19 @@
 		<div id="stepFour"><i class="fal fa-info-circle"></i>&nbsp;<a id="stepFour-text"></a>기타정보</div>
 	</div>	
 	<br>
-	<div class="container text-center">
-		<h3>나를 소개하세요</h3>		
+	<div id="content" style="display: none;">
+		<div class="container text-center">
+			<h3>나를 소개하세요</h3>		
+		</div>
+		<br>
+		<div class="container text-center">
+			<a id="localtion_selected_text">소개문구</a>
+		</div>
+		<br>
+		<div class="line-divider"></div>
+		<br>
+		<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 	</div>
-	<br>
-	<div class="container text-center">
-		<a id="localtion_selected_text">소개문구</a>
-	</div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
