--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -17,31 +17,32 @@
 		<div id="stepFour"><i class="fal fa-info-circle"></i>&nbsp;<a id="stepFour-text"></a>기타정보</div>
 	</div>	
 	<br>
-	<div class="container text-center">
-		<h3>활동지역을 선택하세요</h3>		
+	<div id="content" style="display: none;">
+		<div class="container text-center">
+			<h3>활동지역을 선택하세요</h3>		
+		</div>
+		<br>
+		<div class="line-divider"></div>
+		<br>
+		<div class="container text-center">
+			<div class="location"></div>
+		</div>
+		<div id="select_div" style="display: none;"><br><button style="display: block; margin: auto; width: 80%;" id="select" type="button" class="btn btn-secondary">선택</button></div>
+		<br>
+		<div class="line-divider"></div>
+		<br>
+		<div class="container text-center">
+			<div class="location-selected"></div>
+		</div>
+		<br>
+		<div class="container text-center">
+			<a id="localtion_selected_text">선택된 지역의 매물을 담당합니다.</a>
+		</div>
+		<br>
+		<div class="line-divider"></div>
+		<br>
+		<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 	</div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div class="container text-center">
-		<div class="location"></div>
-	</div>
-	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="select" type="button" class="btn btn-secondary">선택</button></div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div class="container text-center">
-		<div class="location-selected"></div>
-	</div>
-	<br>
-	<div class="container text-center">
-		<a id="localtion_selected_text">선택된 지역의 매물을 담당합니다.</a>
-	</div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
