--- a/src/main/resources/templates/partner/partnerStepTwo.html
+++ b/src/main/resources/templates/partner/partnerStepTwo.html
@@ -17,19 +17,21 @@
 		<div id="stepFour"><i class="fal fa-info-circle"></i>&nbsp;<a id="stepFour-text"></a>기타정보</div>
 	</div>	
 	<br>
-	<div class="container text-center">
-		<h3>인증방법을 선택하세요</h3>		
+	<div id="content" style="display: none;">
+		<div class="container text-center">
+			<h3>인증방법을 선택하세요</h3>		
+		</div>
+		<br>
+		<div class="line-divider"></div>
+		<br>
+		<div id="authMethod" class="container text-center">
+			<div><button style="display:block; margin: auto; width: 80%;" id="phoneAuth" type="button" class="btn btn-primary">휴대폰</button></div>
+		</div>
+		<br>
+		<div class="line-divider"></div>
+		<br>
+		<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 	</div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div id="authMethod" class="container text-center">
-		<div><button style="display:block; margin: auto; width: 80%;" id="phoneAuth" type="button" class="btn btn-primary">휴대폰</button></div>
-	</div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
