--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -17,40 +17,42 @@
 		<div id="stepFour"><i class="fal fa-info-circle"></i>&nbsp;<a id="stepFour-text"></a>기타정보</div>
 	</div>	
 	<br>
+	<div id="content" style="display: none;">
 	<div class="line-divider"></div>
 	<br>
-	<div id="applicantType" class="container text-center">
-		<div style="margin: auto; width:80%;">
-			<div class="btn-group btn-group-toggle" data-toggle="buttons">
-				<label class="btn btn-secondary active">
-					<input type="radio" name="options" id="option1" autocomplete="off" checked>대표본인
-				</label>
-				<label class="btn btn-secondary">
-					<input type="radio" name="options" id="option2" autocomplete="off">사무원
-				</label>
+		<div id="applicantType" class="container text-center">
+			<div style="margin: auto; width:80%;">
+				<div class="btn-group btn-group-toggle" data-toggle="buttons">
+					<label class="btn btn-secondary active">
+						<input type="radio" name="options" id="option1" autocomplete="off" checked>대표본인
+					</label>
+					<label class="btn btn-secondary">
+						<input type="radio" name="options" id="option2" autocomplete="off">사무원
+					</label>
+				</div>
 			</div>
 		</div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="아이디" id="id" type="text" value=''></div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="number" value=''></div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="number" value=''></div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
+		<br>
+		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="number" value=''></div>
+		<br>
+		<div class="line-divider"></div>
+		<br>
+		<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 	</div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="아이디" id="id" type="text" value=''></div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="number" value=''></div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="number" value=''></div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
-	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="number" value=''></div>
-	<br>
-	<div class="line-divider"></div>
-	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
