--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/partner/partnerStepThree.css">
+<link rel="stylesheet" href="/css/checkbox.css">
 <title>Insert title here</title>
 </head>
 
