--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -33,7 +33,20 @@
 		<div class="line-divider"></div>
 		<br>
 		<div class="container text-center">
-			<div class="location-selected"></div>
+			<div class="location-selected">
+				<table id="location_selected_table" class="table">
+	  				<thead>
+		    			<tr>
+			      			<th scope="col">시</th>
+			      			<th scope="col">구</th>
+			      			<th scope="col">동</th>
+		    			</tr>
+	  				</thead>
+	  				<tbody>
+	  					
+					</tbody>
+				</table>
+			</div>
 		</div>
 		<br>
 		<div class="container text-center">
