--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -34,7 +34,7 @@
 		<br>
 		<div class="container text-center">
 			<div class="location-selected">
-				<table id="location_selected_table" class="table">
+				<table class="table">
 	  				<thead>
 		    			<tr>
 			      			<th scope="col">시</th>
@@ -42,7 +42,7 @@
 			      			<th scope="col">동</th>
 		    			</tr>
 	  				</thead>
-	  				<tbody>
+	  				<tbody id="location_selected_table">
 	  					
 					</tbody>
 				</table>
