--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -37,9 +37,9 @@
 				<table class="table">
 	  				<thead>
 		    			<tr>
-			      			<th scope="col">시</th>
-			      			<th scope="col">구</th>
-			      			<th scope="col">동</th>
+			      			<th scope="col">시/도</th>
+			      			<th scope="col">시/군/구</th>
+			      			<th scope="col">읍/면/동</th>
 		    			</tr>
 	  				</thead>
 	  				<tbody id="location_selected_table">
