--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -28,7 +28,8 @@
 		<div class="container text-center">
 			<div class="location"></div>
 		</div>
-		<div id="select_div" style="display: none;"><br><button style="display: block; margin: auto; width: 80%;" id="select" type="button" class="btn btn-secondary">선택</button></div>
+		<div id="back_div" style="display: none;"><br><button style="display: block; margin: auto; width: 80%;" id="back" type="button" class="btn btn-outline-dark">뒤로</button></div>
+		<div id="select_div" style="display: none;"><br><button style="display: block; margin: auto; width: 80%;" id="select" type="button" class="btn btn-outline-success">선택</button></div>
 		<br>
 		<div class="line-divider"></div>
 		<br>
@@ -40,6 +41,7 @@
 			      			<th scope="col">시/도</th>
 			      			<th scope="col">시/군/구</th>
 			      			<th scope="col">읍/면/동</th>
+			      			<th scope="col"></th>
 		    			</tr>
 	  				</thead>
 	  				<tbody id="location_selected_table">
