--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -28,8 +28,9 @@
 		<div class="container text-center">
 			<div class="location"></div>
 		</div>
-		<div id="back_div" style="display: none;"><br><button style="display: block; margin: auto; width: 80%;" id="back" type="button" class="btn btn-outline-dark">뒤로</button></div>
-		<div id="select_div" style="display: none;"><br><button style="display: block; margin: auto; width: 80%;" id="select" type="button" class="btn btn-outline-success">선택</button></div>
+		<br>
+		<div id="back_div" style="display: none;"><button style="display: block; margin: auto; margin-bottom: 10px; width: 80%;" id="back" type="button" class="btn btn-outline-dark">뒤로</button></div>
+		<div id="select_div" style="display: none;"><button style="display: block; margin: auto; width: 80%;" id="select" type="button" class="btn btn-outline-success">선택</button></div>
 		<br>
 		<div class="line-divider"></div>
 		<br>
