디자인 디벨롭. 딜 디벨롭

--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -27,11 +27,7 @@
 <link href="../comn/bootstrap.min.css" rel="stylesheet">
 
 <link href="../fapro/css/all.min.css" rel="stylesheet">
-
-
-<link href="../comn/probe.css" rel="stylesheet">
-
-
+<link href="../css/probe.css" rel="stylesheet">
 <script src="../js/cm/cmIndex.js"></script>
 <script src="../js/util/globalUtil.js"></script>
 </html>
