--- a/src/main/resources/templates/cm/cmNav.html
+++ b/src/main/resources/templates/cm/cmNav.html
@@ -6,7 +6,7 @@
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navToggler" aria-controls="navToggler" aria-expanded="false" aria-label="Toggle navigation">
 		<i class="fas fa-bars"></i>
 	</button>
-	<a class="navbar-brand" href="#">프로브</a>
+	<a class="navbar-brand" href="#"><i class="fal fa-home"></i></a>
 	<div class="collapse navbar-collapse" id="navToggler">
 		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 			<li class="nav-item"><a class="nav-link" href="#" id="cmHome"><i class="fal fa-home"></i> 프로브 홈</a></li>
