--- a/src/main/resources/templates/cm/cmFooter.html
+++ b/src/main/resources/templates/cm/cmFooter.html
@@ -6,5 +6,5 @@
 <div class="footer">
 	Copyright JungleSix Inc. All rights reserved.
 	주식회사 정글식스 | 대표 정규식 | 사업자등록번호 144-27-00743 | 주소 경기도 성남시 분당구 판교동
-	이용약관 | 집토스 운영방침 | 개인정보 처리방침 | 대표전화 0000-0000 (평일 10시-18시) | 카카오톡 @프로브홈 | 통신판매업신고 제2018-xxxx-xxxx호
+	이용약관 | 운영방침 | 개인정보 처리방침 | 대표전화 0000-0000 (평일 10시-18시) | 카카오톡 @프로브홈 | 통신판매업신고 제2018-xxxx-xxxx호
 </div>
