--- a/src/main/resources/templates/partner/partnerStepFour.html
+++ b/src/main/resources/templates/partner/partnerStepFour.html
@@ -22,12 +22,10 @@
 			<h3>나를 소개하세요</h3>		
 		</div>
 		<br>
-		<div class="md-form">
-  			<textarea type="text" id="form7" class="md-textarea form-control introduction-myself" rows="3"></textarea>
-  			<label for="form7">Material textarea</label>
+		<div class="form-group purple-border" style="width: 80%; margin: auto;">
+  			<label for="exampleFormControlTextarea4">소개 내용</label>
+  			<textarea class="form-control" id="exampleFormControlTextarea4" rows="7"></textarea>
 		</div>
-		<br>
-		<div class="line-divider"></div>
 		<br>
 		<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 	</div>
