--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/partner/partnerStepOne.css">
+<link rel="stylesheet" href="/swiper/swiper.min.css">
 <title>Insert title here</title>
 </head>
 <body>
@@ -16,45 +17,120 @@
 		<div id="stepFour"><i class="fal fa-info-circle"></i>&nbsp;<a id="stepFour-text"></a>기타정보</div>
 	</div>	
 	<br>
-	<div id="content" style="display: none;">
-	<div class="line-divider"></div>
-	<br>
-		<div id="applicantType" class="container text-center">
-			<div style="margin: auto; width:90%;">
-				<div class="btn-group btn-group-toggle" data-toggle="buttons">
-					<label class="btn btn-secondary active">
-						<input type="radio" name="options" id="option1" autocomplete="off" checked>대표본인
-					</label>
-					<label class="btn btn-secondary">
-						<input type="radio" name="options" id="option2" autocomplete="off">사무원
-					</label>
+	<div class="swiper-container">
+    	<div class="swiper-wrapper">
+			<div class="swiper-slide content">
+				<div class="line-divider"></div>
+				<br>
+				<div id="applicantType" class="container text-center">
+					<div style="margin: auto; width:90%;">
+						<div class="btn-group btn-group-toggle" data-toggle="buttons">
+							<label class="btn btn-secondary active">
+								<input type="radio" name="options" id="option1" autocomplete="off" checked>대표본인
+							</label>
+							<label class="btn btn-secondary">
+								<input type="radio" name="options" id="option2" autocomplete="off">사무원
+							</label>
+						</div>
+					</div>
 				</div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="아이디" id="id" type="text" value=''></div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="number" value=''></div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="number" value=''></div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
+				<br>
+				<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="number" value=''></div>
+				<br>
+				<div class="line-divider"></div>
+				<br>
+				<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success goNext">다음</button></div>
+			</div>
+			<div class="swiper-slide content">
+				<div class="container text-center">
+					<h3>인증방법을 선택하세요</h3>		
+				</div>
+				<br>
+				<div class="line-divider"></div>
+				<br>
+				<div id="authMethod" class="container text-center">
+					<div><button style="display:block; margin: auto; width: 80%;" id="phoneAuth" type="button" class="btn btn-primary">휴대폰</button></div>
+				</div>
+				<br>
+				<div class="line-divider"></div>
+				<br>
+				<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success goNext">다음</button></div>
+			</div>
+			
+			<div class="swiper-slide content">
+				<div class="container text-center">
+					<h3>활동지역을 선택하세요</h3>		
+				</div>
+				<br>
+				<div class="line-divider"></div>
+				<br>
+				<div class="container text-center">
+					<div class="location"></div>
+				</div>
+				<br>
+				<div id="select_div" style="display: none;"><button style="display: block; margin: auto; margin-bottom: 10px; width: 80%;" id="select" type="button" class="btn btn-outline-success">선택</button></div>
+				<div id="back_div" style="display: none;"><button style="display: block; margin: auto; width: 80%;" id="back" type="button" class="btn btn-outline-dark">뒤로</button></div>
+				<br>
+				<div class="line-divider"></div>
+				<br>
+				<div class="container text-center">
+					<div class="location-selected">
+						<table class="table">
+			  				<thead>
+				    			<tr>
+					      			<th scope="col">시/도</th>
+					      			<th scope="col">시/군/구</th>
+					      			<th scope="col">읍/면/동</th>
+					      			<th scope="col"></th>
+				    			</tr>
+			  				</thead>
+			  				<tbody id="location_selected_table">
+			  					
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<br>
+				<div class="container text-center">
+					<a id="localtion_selected_text">선택된 지역의 매물을 담당합니다.</a>
+				</div>
+				<br>
+				<div class="line-divider"></div>
+				<br>
+				<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success goNext">다음</button></div>
+			</div>
+			<div class="swiper-slide content">
+				<div class="container text-center">
+					<h3>나를 소개하세요</h3>		
+				</div>
+				<br>
+				<div class="form-group purple-border" style="width: 80%; margin: auto;">
+		  			<label for="exampleFormControlTextarea4">소개 내용</label>
+		  			<textarea class="form-control" id="exampleFormControlTextarea4" rows="7"></textarea>
+				</div>
+				<br>
+				<div><button style="display:block; margin: auto; width: 80%;" id="complete" type="button" class="btn btn-success">완료</button></div>			
 			</div>
 		</div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="아이디" id="id" type="text" value=''></div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="number" value=''></div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="number" value=''></div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
-		<br>
-		<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="number" value=''></div>
-		<br>
-		<div class="line-divider"></div>
-		<br>
-		<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 	</div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+<script src="/swiper/swiper.min.js"></script>
 <script src="/js/partner/partnerStepOne.js"></script>
 
 </html>
