--- a/src/main/resources/templates/partner/partnerStep.html
+++ b/src/main/resources/templates/partner/partnerStep.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/partner/partnerStepOne.css">
+<link rel="stylesheet" href="/css/partner/partnerStep.css">
 <link rel="stylesheet" href="/swiper/swiper.min.css">
 <title>Insert title here</title>
 </head>
@@ -131,6 +131,6 @@
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 <script src="/swiper/swiper.min.js"></script>
-<script src="/js/partner/partnerStepOne.js"></script>
+<script src="/js/partner/partnerStep.js"></script>
 
 </html>
