--- a/src/main/resources/templates/partner/partnerStep.html
+++ b/src/main/resources/templates/partner/partnerStep.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/partner/partnerStep.css">
 <link rel="stylesheet" href="/swiper/swiper.min.css">
+<link rel="stylesheet" href="/css/checkbox.css">
 <title>Insert title here</title>
 </head>
 <body>
