--- a/src/main/resources/templates/cm/cmWelcome.html
+++ b/src/main/resources/templates/cm/cmWelcome.html
@@ -12,8 +12,8 @@
   	</div>
 <br><br>
 	<div class="container text-center">
-		<a class="btn btn-success btn-lg" href="#" role="button" id="cmCusGet" name="cmCusGet">집 구하기</a>
-		<a class="btn btn-success btn-lg" href="#" role="button" id="cmCusSet" name="cmCusSet">집 내놓기</a>
+		<a class="btn aqua-gradient btn-rounded btn-lg" href="#" role="button" id="cmCusGet" name="cmCusGet">집 구하기</a>
+		<a class="btn aqua-gradient btn-rounded btn-lg" href="#" role="button" id="cmCusSet" name="cmCusSet">집 내놓기</a>
 	</div>
 </div>
 
