--- a/src/main/resources/templates/cm/cmNav.html
+++ b/src/main/resources/templates/cm/cmNav.html
@@ -2,18 +2,26 @@
 <meta charset="UTF-8">
 <script src="../js/cm/cmNav.js"></script>
   
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navToggler" aria-controls="navToggler" aria-expanded="false" aria-label="Toggle navigation">
-		<i class="fas fa-bars"></i>
+<nav class="navbar navbar-dark navbar-3 cyan darken-2 mb-4">
+	<!-- Collapse button -->
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navToggler" 
+	aria-controls="navToggler" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		
 	</button>
 	<a class="navbar-brand" href="#"><i class="fal fa-home"></i></a>
+	
 	<div class="collapse navbar-collapse" id="navToggler">
-		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-			<li class="nav-item"><a class="nav-link" href="#" id="cmHome"><i class="fal fa-home"></i> 프로브 홈</a></li>
-			<li class="nav-item"><a class="nav-link" href="#" id="dlMain_9"><i class="fal fa-search-location"></i> 집 구하기</a></li>
-			<li class="nav-item"><a class="nav-link" href="#" id="dlMain_8"><i class="fal fa-megaphone"></i> 집 내놓기</a></li>
-			<li class="nav-item"><a class="nav-link" href="#"><i class="fal fa-file-alt"></i> 사용 방법</a></li>
-			<li class="nav-item"><a class="nav-link" href="#" id="ptIncome"><i class="fal fa-building"></i> 공인중개사 무료 등록</a></li>
-		</ul>
+	  <ul class="navbar-nav mr-auto">
+	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="cmHome"><i class="fal fa-home"></i> 프로브 홈</a></li>
+	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="dlMain_9"><i class="fal fa-search-location"></i> 집 구하기</a></li>
+	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="dlMain_8"><i class="fal fa-megaphone"></i> 집 내놓기</a></li>
+	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#"><i class="fal fa-file-alt"></i> 사용 방법</a></li>
+	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="ptIncome"><i class="fal fa-building"></i> 공인중개사 무료 등록</a></li>
+	  </ul>
+	  <!-- Links -->
+	
 	</div>
-</nav>
+	<!-- Collapsible content -->
+	
+	</nav>
