--- a/src/main/resources/templates/cm/cmFooter.html
+++ b/src/main/resources/templates/cm/cmFooter.html
@@ -2,24 +2,20 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/css/cm/cmFooter.css">
 <br><br>
-<!-- Footer -->
-<footer class="page-footer font-small cyan darken-2">
-    <!-- Footer Elements -->
-    <div class="container">
-      <!-- Grid row-->
+
+<footer class="page-footer font-small">
+    <!--
+     <div class="container">
       <div class="row">
-        <!-- Grid column -->
         <div class="col-md-12 py-1 ">
         주식회사 정글식스 | 대표 정규식 | 사업자등록번호 144-27-00743 | 주소 경기도 성남시 분당구 판교동 |
 	이용약관 | 운영방침 | 개인정보 처리방침 | 대표전화 0000-0000 (평일 10시-18시) | 카카오톡 @프로브홈 | 통신판매업신고 제2018-xxxx-xxxx호
         </div>
-        <!-- Grid column -->
       </div>
-      <!-- Grid row-->
     </div>
-    <!-- Footer Elements -->
+     -->
 
-    <div class="footer-copyright text-center py-3">© 2018 Copyright
-      <a href="#"> JungleSix Inc. All rights reserved.</a>
-    </div>
-  </footer>
+   <div class="footer-copyright text-center text-black-50 py-3">© 2018 Copyright
+     <a href="#">PROBE Inc. All rights reserved.</a>
+   </div>
+</footer>
