--- a/src/main/resources/templates/cm/cmLocInputer.html
+++ b/src/main/resources/templates/cm/cmLocInputer.html
@@ -15,10 +15,11 @@
 		</nav>
 		
 		<div class="container">
-			<div class="row form-check" id="divSelButtons" name="divSelButtons">
-			Loading...
+			<div class="row" id="divSelButtons" name="divSelButtons">
+				Loading...
 			</div>
 		</div>
+			
 	</div>
 
     <div class="modal-footer">
@@ -27,20 +28,12 @@
     </div>
 </div>
 
-<script id="locButtonTemplate1" type="text/html">
-{{#.}}
-<button type="button" class="btn btn-success btnChkbox" data-code="{{CODE}}" data-depth="{{DEPTH}}">
-<input type="checkbox" class="chkChkbox" id="chkLocInputEach_{{CODE}}" data-code="{{CODE}}" data-cdnm="{{CODE_NM}}"> {{CODE_NM}}
-</button>&nbsp;
-{{/.}}
-</script>
-
-
 <script id="locButtonTemplate" type="text/html">
 {{#.}}
-<button type="button" class="btn btn-outline-default btn-rounded waves-effect btnChkbox" data-code="{{CODE}}" data-depth="{{DEPTH}}">
-	<input type="checkbox" class="form-check-input chkChkbox" id="chkLocInputEach_{{CODE}}" data-code="{{CODE}}" data-cdnm="{{CODE_NM}}">
-    <label class="form-check-label" for="chk_chkLocInputEach_{{CODE}}">{{CODE_NM}}</label>
+<button type="button" class="btn aqua-gradient btn-rounded waves-effect pb-btnSelector" for="chk_chkLocInputEach_{{CODE}}" data-code="{{CODE}}" data-cdnm="{{CODE_NM}}" data-depth="{{DEPTH}}">
+	<input type="checkbox" class="form-check-input chkLocInputEach" id="chkLocInputEach_{{CODE}}" data-code="{{CODE}}" data-cdnm="{{CODE_NM}}" data-depth="{{DEPTH}}">
+    <label class="form-check-label" for="chkLocInputEach_{{CODE}}">{{CODE_NM}}</label>
 </button>
 {{/.}}
 </script>
+
