--- a/src/main/resources/templates/cm/cmNav.html
+++ b/src/main/resources/templates/cm/cmNav.html
@@ -7,9 +7,10 @@
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navToggler" 
 	aria-controls="navToggler" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
-		
 	</button>
-	<a class="navbar-brand" href="#"><i class="fal fa-home"></i></a>
+	<a class="navbar-brand" href="#">
+		<img src = "/images/logo.svg" style="width:40px;height:40px;">
+	</a>
 	
 	<div class="collapse navbar-collapse" id="navToggler">
 	  <ul class="navbar-nav mr-auto">
