--- a/src/main/resources/templates/cm/cmWelcome.html
+++ b/src/main/resources/templates/cm/cmWelcome.html
@@ -4,23 +4,21 @@
 
 
 <div class="jumbotron">
-<br><br>
-	<div class="container">
-		<p class="text-center">구할 때도, 내놓을 때도</p>
-		<h2 class="text-center">수수료 할인해주는</h2>
-		<p class="text-center">공인중개사님을 찾아보세요.</p>
-  	</div>
-<br><br>
 	<div class="container text-center">
-		<a class="btn aqua-gradient btn-rounded btn-lg" href="#" role="button" id="cmCusGet" name="cmCusGet">집 구하기</a>
-		<a class="btn aqua-gradient btn-rounded btn-lg" href="#" role="button" id="cmCusSet" name="cmCusSet">집 내놓기</a>
+<br><br>
+		<p >구할 때도, 내놓을 때도</p>
+		<h2>수수료 할인해주는</h2>
+		<p >공인중개사님을 찾아보세요.</p>
+<br><br>
+		<a class="btn blue-gradient btn-rounded btn-lg" href="#" role="button" id="cmCusGet">집 구하기</a>
+		<a class="btn blue-gradient btn-rounded btn-lg" href="#" role="button" id="cmCusSet">집 내놓기</a>
 	</div>
 </div>
 
 
 <div class="container text-center">
 	<h1><i class="fal fa-hand-holding-usd"></i></h1>
-	<h3>중개수수료, 아껴볼까요?</h3>
+	<h3>중개수수료. 아껴볼까요?</h3>
 	<p>부담스러운 부동산 중개수수료<br>프로브에서 최소 10% 이상 절약하세요.</p>
 </div>
 <br><br>
@@ -33,6 +31,6 @@
 <div class="container text-center">
 	<h1><i class="fal fa-handshake"></i></h1>
 	<h3>중개사님을 찾아드려요.</h3>
-	<p>저렴한 수수료의 공인중개사님을 찾아드려요.<br>중개수수료 10%~50% 할인!<br>수수료가 최소 10% 이상 절약됩니다.</p>
+	<p>저렴한 수수료의 공인중개사님을 찾아드려요.<br>중개수수료 10% ~ 50% 할인!<br>수수료가 최소 10% 이상 절약됩니다.</p>
 </div>
 
