--- a/src/main/resources/templates/cm/cmNav.html
+++ b/src/main/resources/templates/cm/cmNav.html
@@ -17,7 +17,7 @@
 	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="cmHome"><i class="fal fa-home"></i> 프로브 홈</a></li>
 	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="dlMain_9"><i class="fal fa-search-location"></i> 집 구하기</a></li>
 	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="dlMain_8"><i class="fal fa-megaphone"></i> 집 내놓기</a></li>
-	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#"><i class="fal fa-file-alt"></i> 사용 방법</a></li>
+	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="cmHowto"><i class="fal fa-file-alt"></i> 사용 방법</a></li>
 	    <li class="nav-item"><a class="nav-link waves-effect waves-light" href="#" id="ptIncome"><i class="fal fa-building"></i> 공인중개사 무료 등록</a></li>
 	  </ul>
 	  <!-- Links -->
