--- a/src/main/resources/templates/dl/dlMain.html
+++ b/src/main/resources/templates/dl/dlMain.html
@@ -24,21 +24,14 @@
 		</div>
 	</div>
 	
-	<button type="button" class="btn blue-gradient btn-block" id="btnOkNext">다음</button>
-	<!--
-	<div class="fixed-bottom">
-		<button type="button" class="btn blue-gradient btn-block" id="btnOkNext">다음</button>
-	</div>
-	  -->
-	
-
+	<button type="button" class="btn default-color-dark waves-effect btn-block" id="btnOkNext">다음</button>
 	<input id="txtDlBeCode1" type="text" th:value="${dlValStep1}" class="sr-only">
 
 </div>
 
 <script id="stepCardTemplate" type="text/html">
 {{#.}}
-<button type="button" class="btn aqua-gradient btn-rounded waves-effect pb-btnSelector" for="chk_btnDealMain_{{code}}">
+<button type="button" class="btn default-color waves-effect pb-btnSelector" for="chk_btnDealMain_{{code}}">
     <input type="checkbox" class="form-check-input chkBtnDealItem" id="chk_btnDealMain_{{code}}" data-cdnm="{{cdnm}}" data-code="{{code}}" data-step="{{STEP}}">
     <label class="form-check-label" for="chk_btnDealMain_{{code}}">{{cdnm}}</label>
 </button>
